<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/imageListFragment">

    <fragment
        android:id="@+id/imageListFragment"
        android:name="com.motorro.sqlite.ImageListFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_image_list">
        <action
            android:id="@+id/image_list_to_add"
            app:destination="@id/addImageFragment" />
    </fragment>
    <fragment
        android:id="@+id/addImageFragment"
        android:name="com.motorro.sqlite.AddImageFragment"
        android:label="@string/title_add_image"
        tools:layout="@layout/fragment_add">
        <argument
            android:name="image"
            app:argType="android.net.Uri" />
        <action
            android:id="@+id/add_image_to_tags"
            app:destination="@id/tagsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tagsFragment"
        android:name="com.motorro.sqlite.TagsFragment"
        android:label="@string/title_tags"
        tools:layout="@layout/fragment_tags" >
        <action
            android:id="@+id/tags_to_tag"
            app:destination="@id/tagFragment" />
    </fragment>
    <fragment
        android:id="@+id/tagFragment"
        android:name="com.motorro.sqlite.TagFragment"
        android:label="@string/title_tag"
        tools:layout="@layout/fragment_tag">
        <argument
            android:name="tagId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>